--- a/index.slim
+++ b/index.slim
@@ -4,6 +4,7 @@ html lang="ja"
     meta charset="UTF-8"
     meta name="viewport" content="width=320,initial-scale=1.0,minimum-scale=1.0"
     title プログラミング言語チェックシートメーカー
+    link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css"
     link rel="stylesheet" href="lib/Flat-UI/bootstrap/css/bootstrap.css"
     link rel="stylesheet" href="lib/Flat-UI/css/flat-ui.css"
     link rel="stylesheet" href="css/style.css"
@@ -23,6 +24,8 @@ html lang="ja"
         #preview_wrap
           h2 プレビュー
           #preview
+            ul.lang_items
+
           button.btn.btn-primary#shuffle 並び順をシャッフル
 
       .content.col-md-6
@@ -232,5 +235,4 @@ script src="lib/Flat-UI/js/flatui-checkbox.js"
 script src="lib/Flat-UI/js/flatui-radio.js"
 script src="lib/Flat-UI/js/jquery.tagsinput.js"
 script src="lib/Flat-UI/js/jquery.placeholder.js"
-script src="lib/Flat-UI/js/jquery.stacktable.js"
 script src="lib/Flat-UI/js/application.js"
