--- a/css/style.sass
+++ b/css/style.sass
@@ -1,3 +1,8 @@
+@import url(http://fonts.googleapis.com/css?family=Raleway:300)
+@mixin preview_font
+  font-family: 'Raleway', sans-serif
+  font-size: 12px
+
 @mixin cf 
   zoom: 1
   &:before,
@@ -57,6 +62,19 @@ p.small
     padding-bottom: 30px
     #preview
       margin-bottom: 20px
+      overflow: hidden
+      ul.lang_items
+        @include cf
+        @include preview_font
+        margin: 0 -60px
+        padding: 0
+        list-style-type: none
+        li
+          float: left
+          margin-left: 10px
+          .fa-stack
+            width: 1em
+
 
 .fixed
   position: fixed
