言語を追加

--- a/index.slim
+++ b/index.slim
@@ -84,6 +84,14 @@ html lang="ja"
                     input type="checkbox" value="CSS" data-toggle="checkbox"
                     | CSS
                 li
+                  label.checkbox for="Dart"
+                    input type="checkbox" value="Dart" data-toggle="checkbox"
+                    | Dart
+                li
+                  label.checkbox for="Haxe"
+                    input type="checkbox" value="Haxe" data-toggle="checkbox"
+                    | Haxe
+                li
                   label.checkbox for="HTML"
                     input type="checkbox" value="HTML" data-toggle="checkbox"
                     | HTML
@@ -92,10 +100,17 @@ html lang="ja"
                     input type="checkbox" value="JavaScript" data-toggle="checkbox"
                     | JavaScript
                 li
+                  label.checkbox for="JSX"
+                    input type="checkbox" value="JSX" data-toggle="checkbox"
+                    | JSX
+                li
                   label.checkbox for="Sass"
                     input type="checkbox" value="Sass" data-toggle="checkbox"
                     | Sass
-
+                li
+                  label.checkbox for="TypeScript"
+                    input type="checkbox" value="TypeScript" data-toggle="checkbox"
+                    | TypeScript
             .category
               h3 関数型言語
               ul
@@ -176,6 +191,10 @@ html lang="ja"
                     input type="checkbox" value="R" data-toggle="checkbox"
                     | R
                 li
+                  label.checkbox for="ShellScript"
+                    input type="checkbox" value="ShellScript" data-toggle="checkbox"
+                    | ShellScript
+                li
                   label.checkbox for="SQL"
                     input type="checkbox" value="SQL" data-toggle="checkbox"
                     | SQL
@@ -184,9 +203,17 @@ html lang="ja"
                     input type="checkbox" value="Smalltalk" data-toggle="checkbox"
                     | Smalltalk
                 li
+                  label.checkbox for="Swift"
+                    input type="checkbox" value="Swift" data-toggle="checkbox"
+                    | Swift
+                li
                   label.checkbox for="VB.NET"
                     input type="checkbox" value="VB.NET" data-toggle="checkbox"
                     | VB.NET
+                li
+                  label.checkbox for="VimScript"
+                    input type="checkbox" value="VimScript" data-toggle="checkbox"
+                    | VimScript
                 li
                   label.checkbox for="Whitespace"
                     input type="checkbox" value="Whitespace" data-toggle="checkbox"
