画像サイズによってフォントサイズを変更

--- a/index.slim
+++ b/index.slim
@@ -234,19 +234,19 @@ html lang="ja"
           ul.size-select
             li
               label.radio
-                input type="radio" name="size-select" id="twitter" data-toggle="radio" data-width="1500" data-height="500" checked="checked"
+                input type="radio" name="size-select" id="twitter" data-toggle="radio" data-width="1500" data-height="500" data-fontsize="12" checked="checked"
                 | Twitterプロフィール背景(1500x500)
             li
               label.radio
-                input type="radio" name="size-select" id="facebook" data-toggle="radio" data-width="851" data-height="315"
+                input type="radio" name="size-select" id="facebook" data-toggle="radio" data-width="851" data-fontsize="4" data-height="315"
                 | Facebookプロフィール背景(851x315)
             li
               label.radio
-                input type="radio" name="size-select" id="card-tate" data-toggle="radio" data-width="840" data-height="1236"
+                input type="radio" name="size-select" id="card-tate" data-toggle="radio" data-width="840"data-fontsize="16" data-height="1236"
                 | 名刺裏 縦 (840x1236)(55mmx91mm+裁ち落とし6mm, 350dpi)
             li
               label.radio
-                input type="radio" name="size-select" id="card-yoko" data-toggle="radio" data-width="1236" data-height="840"
+                input type="radio" name="size-select" id="card-yoko" data-toggle="radio" data-width="1236" data-fontsize="15" data-height="840"
                 | 名刺裏 横 (1236x840)(91mmx55mm+裁ち落とし6mm, 350dpi)
 
         h2 4. make!
