--- a/css/style.sass
+++ b/css/style.sass
@@ -36,6 +36,7 @@ p.notice
   margin: 20px 0
 
 .content
+  margin-bottom: 30px
   ul
     list-style-type: none
     padding: 0
@@ -52,10 +53,6 @@ p.notice
     @include cf
     li
       float: left
-
-.checkbox
-  padding-left: 25px
-  padding-right: 15px
 
 #preview_wrap_wrap
   height: 300px
@@ -96,3 +93,7 @@ p.notice
 @media (min-width: 1200px)
   .fixed
     width: 40%
+
+.checkbox
+  padding-left: 25px
+  padding-right: 15px
