--- a/css/style.sass
+++ b/css/style.sass
@@ -76,6 +76,9 @@ p.notice
       .fa-stack
         width: 1em
 
+#my_image
+  margin-top: 15px
+
 .minimize
   transform-origin: left top
   transform: scale(0.3)
