--- a/index.slim
+++ b/index.slim
@@ -239,10 +239,11 @@ div class="modal fade" id="makeModal" tabindex="-1" role="dialog" aria-labelledb
         button type="button" class="close" data-dismiss="modal" aria-hidden="true" &times;
         h4 class="modal-title" id="makeModalLabel" 完成！
       div class="modal-body"
+        div.text-center
+          a.btn.btn-primary#download href="" download="checksheet.png" Download
         img#my_image width="100%"
-      div class="modal-footer"
-        button type="button" class="btn btn-default" data-dismiss="modal" Close
-        button type="button" class="btn btn-primary" Save changes
+        h3 作ったことをシェアしよう！
+
 
 
 //script src="lib/Flat-UI/js/jquery-1.8.3.min.js"
