VimScript -> Vim script

--- a/index.slim
+++ b/index.slim
@@ -211,9 +211,9 @@ html lang="ja"
                     input type="checkbox" value="VB.NET" data-toggle="checkbox"
                     | VB.NET
                 li
-                  label.checkbox for="VimScript"
-                    input type="checkbox" value="VimScript" data-toggle="checkbox"
-                    | VimScript
+                  label.checkbox for="Vim script"
+                    input type="checkbox" value="Vimscript" data-toggle="checkbox"
+                    | Vim script
                 li
                   label.checkbox for="Whitespace"
                     input type="checkbox" value="Whitespace" data-toggle="checkbox"
