--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway:300);
+body {
+  -webkit-text-size-adjust: 100%; }
+
 h1 {
   text-align: center;
   font-size: 54px; }
