--- a/index.slim
+++ b/index.slim
@@ -60,39 +60,39 @@ html lang="ja"
               h3 スタンダード
               ul
                 li
-                  label.checkbox for="C"
-                    input type="checkbox" value="C" id="C" data-toggle="checkbox"
+                  label.checkbox
+                    input type="checkbox" value="C" data-toggle="checkbox"
                     | C
                 li
-                  label.checkbox for="C#"
+                  label.checkbox
                     input type="checkbox" value="C#" data-toggle="checkbox"
                     | C#
                 li
-                  label.checkbox for="C++"
+                  label.checkbox
                     input type="checkbox" value="C++" data-toggle="checkbox"
                     | C++
                 li
-                  label.checkbox for="Java"
+                  label.checkbox
                     input type="checkbox" value="Java" data-toggle="checkbox"
                     | Java
                 li
-                  label.checkbox for="Objective-C"
+                  label.checkbox
                     input type="checkbox" value="Objective-C" data-toggle="checkbox"
                     | Objective-C
                 li
-                  label.checkbox for="PHP"
+                  label.checkbox
                     input type="checkbox" value="PHP" data-toggle="checkbox"
                     | PHP
                 li
-                  label.checkbox for="Python"
+                  label.checkbox
                     input type="checkbox" value="Python" data-toggle="checkbox"
                     | Python
                 li
-                  label.checkbox for="Ruby"
+                  label.checkbox
                     input type="checkbox" value="Ruby" data-toggle="checkbox"
                     | Ruby
                 li
-                  label.checkbox for="Perl"
+                  label.checkbox
                     input type="checkbox" value="Perl" data-toggle="checkbox"
                     | Perl
 
@@ -100,62 +100,62 @@ html lang="ja"
               h3 フロントエンド
               ul
                 li
-                  label.checkbox for="CoffeeScrippt"
+                  label.checkbox
                     input type="checkbox" value="CoffeeScript" data-toggle="checkbox"
                     | CoffeeScrippt
                 li
-                  label.checkbox for="CSS"
+                  label.checkbox
                     input type="checkbox" value="CSS" data-toggle="checkbox"
                     | CSS
                 li
-                  label.checkbox for="HTML"
+                  label.checkbox
                     input type="checkbox" value="HTML" data-toggle="checkbox"
                     | HTML
                 li
-                  label.checkbox for="JavaScript"
+                  label.checkbox
                     input type="checkbox" value="JavaScript" data-toggle="checkbox"
                     | JavaScript
                 li
-                  label.checkbox for="Sass"
+                  label.checkbox
                     input type="checkbox" value="Sass" data-toggle="checkbox"
                     | Sass
                 li
-                  label.checkbox for="TypeScript"
+                  label.checkbox
                     input type="checkbox" value="TypeScript" data-toggle="checkbox"
                     | TypeScript
             .category
               h3 関数型言語
               ul
                 li
-                  label.checkbox for="Clojure"
+                  label.checkbox
                     input type="checkbox" value="Clojure" data-toggle="checkbox"
                     | Clojure
                 li
-                  label.checkbox for="Erlang"
+                  label.checkbox
                     input type="checkbox" value="Erlang" data-toggle="checkbox"
                     | Erlang
                 li
-                  label.checkbox for="F#"
+                  label.checkbox
                     input type="checkbox" value="F#" data-toggle="checkbox"
                     | F#
                 li
-                  label.checkbox for="Haskell"
+                  label.checkbox
                     input type="checkbox" value="Haskell" data-toggle="checkbox"
                     | Haskell
                 li
-                  label.checkbox for="LISP"
+                  label.checkbox
                     input type="checkbox" value="LISP" data-toggle="checkbox"
                     | LISP
                 li
-                  label.checkbox for="Ocaml"
+                  label.checkbox
                     input type="checkbox" value="Ocaml" data-toggle="checkbox"
                     | Ocaml
                 li
-                  label.checkbox for="Scala"
+                  label.checkbox
                     input type="checkbox" value="Scala" data-toggle="checkbox"
                     | Scala
                 li
-                  label.checkbox for="Scheme"
+                  label.checkbox
                     input type="checkbox" value="Scheme" data-toggle="checkbox"
                     | Scheme
 
@@ -163,59 +163,59 @@ html lang="ja"
               h3 その他
               ul
                 li
-                  label.checkbox for="Assembly"
+                  label.checkbox
                     input type="checkbox" value="Assembly" data-toggle="checkbox"
                     | Assembly
                 li
-                  label.checkbox for="COBOL"
+                  label.checkbox
                     input type="checkbox" value="COBOL" data-toggle="checkbox"
                     | COBOL
                 li
-                  label.checkbox for="D"
+                  label.checkbox
                     input type="checkbox" value="D" data-toggle="checkbox"
                     | D
                 li
-                  label.checkbox for="Fortran"
+                  label.checkbox
                     input type="checkbox" value="Fortran" data-toggle="checkbox"
                     | Fortran
                 li
-                  label.checkbox for="Go"
+                  label.checkbox
                     input type="checkbox" value="Go" data-toggle="checkbox"
                     | Go
                 li
-                  label.checkbox for="Groovy"
+                  label.checkbox
                     input type="checkbox" value="Groovy" data-toggle="checkbox"
                     | Groovy
                 li
-                  label.checkbox for="Lua"
+                  label.checkbox
                     input type="checkbox" value="Lua" data-toggle="checkbox"
                     | Lua
                 li
-                  label.checkbox for="R"
+                  label.checkbox
                     input type="checkbox" value="R" data-toggle="checkbox"
                     | R
                 li
-                  label.checkbox for="ShellScript"
+                  label.checkbox
                     input type="checkbox" value="ShellScript" data-toggle="checkbox"
                     | ShellScript
                 li
-                  label.checkbox for="SQL"
+                  label.checkbox
                     input type="checkbox" value="SQL" data-toggle="checkbox"
                     | SQL
                 li
-                  label.checkbox for="Swift"
+                  label.checkbox
                     input type="checkbox" value="Swift" data-toggle="checkbox"
                     | Swift
                 li
-                  label.checkbox for="VB.NET"
+                  label.checkbox
                     input type="checkbox" value="VB.NET" data-toggle="checkbox"
                     | VB.NET
                 li
-                  label.checkbox for="Vim script"
+                  label.checkbox
                     input type="checkbox" value="Vimscript" data-toggle="checkbox"
                     | Vim script
                 li
-                  label.checkbox for="Whitespace"
+                  label.checkbox
                     input type="checkbox" value="Whitespace" data-toggle="checkbox"
                     | Whitespace
 
