--- a/css/style.sass
+++ b/css/style.sass
@@ -1,7 +1,13 @@
+/////////////////////////////////////////////
+// プレビュー用font
+/////////////////////////////////////////////
 @import url(http://fonts.googleapis.com/css?family=Raleway:300)
 @mixin preview_font
   font-family: 'Raleway', sans-serif
 
+/////////////////////////////////////////////
+// clearfix
+/////////////////////////////////////////////
 @mixin cf 
   zoom: 1
   &:before,
@@ -13,9 +19,11 @@
   &:after 
     clear: both
 
+/////////////////////////////////////////////
+// 全体
+/////////////////////////////////////////////
 body
   -webkit-text-size-adjust: 100%
-
 
 h1
   text-align: center
@@ -48,9 +56,6 @@ p.notice
 
 .langs
   @include cf
-  .category
-    //float: left
-    //margin-right: 15px
   h3
     margin-bottom: 5px
   ul
@@ -87,15 +92,24 @@ p.notice
   transform-origin: left top
   transform: scale(0.3)
 
-@media (max-width: 992px)
-  #preview_wrap_wrap
-    display: none
+.checkbox
+  padding-left: 25px
+  padding-right: 15px
+
+
+/////////////////////////////////////////////
+// PC
+/////////////////////////////////////////////
 @media (min-width: 993px)
   .fixed
     position: fixed
     top: 0px
     width: 40%
 
-.checkbox
-  padding-left: 25px
-  padding-right: 15px
+
+/////////////////////////////////////////////
+// スマホ
+/////////////////////////////////////////////
+@media (max-width: 992px)
+  #preview_wrap_wrap
+    display: none
