--- a/index.slim
+++ b/index.slim
@@ -2,7 +2,7 @@ doctype 5
 html lang="ja"
   head
     meta charset="UTF-8"
-    meta name="viewport" content="width=device-width,initial-scale=1.0"
+    meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
     title プログラミング言語チェックシートメーカー
     link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css"
     link rel="stylesheet" href="lib/Flat-UI/bootstrap/css/bootstrap.css"
