生成中表示

--- a/index.slim
+++ b/index.slim
@@ -233,7 +233,7 @@ html lang="ja"
 
 
         h2 4. make!
-        button#make.btn.btn-primary 画像を生成
+        button#make.btn.btn-primary type="button" data-loading-text="生成中..." 画像を生成
 
 
 div class="modal fade" id="makeModal" tabindex="-1" role="dialog" aria-labelledby="makeModalLabel" aria-hidden="true"
