--- a/css/style.sass
+++ b/css/style.sass
@@ -35,10 +35,12 @@ p.small
   padding-top: 5px
   text-align: center
 
+.mg20
+  margin: 20px 0
+
 p.notice
   color: rgba(52, 73, 94, 0.6)
   font-size: 12px
-  margin: 20px 0
 
 .content
   margin-bottom: 30px
@@ -88,6 +90,12 @@ p.notice
   padding-left: 25px
   padding-right: 15px
 
+#copyright
+  @include preview_font
+  margin: 20px
+  text-align: center
+  i
+    margin-right: 5px
 
 /////////////////////////////////////////////
 // PC
