--- a/index.slim
+++ b/index.slim
@@ -4,6 +4,7 @@ html lang="ja"
     meta charset="UTF-8"
     meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
     title プログラミング言語チェックシートメーカー
+    link rel="shortcut icon" href="http://yoshiko-pg.github.io/img/favicon.ico"
     link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css"
     link rel="stylesheet" href="lib/Flat-UI/bootstrap/css/bootstrap.css"
     link rel="stylesheet" href="lib/Flat-UI/css/flat-ui.css"
