--- a/css/style.sass
+++ b/css/style.sass
@@ -97,6 +97,25 @@ p.notice
   i
     margin-right: 5px
 
+#share
+  @include cf
+  margin: 15px 0 15px -240px
+  padding: 0
+  list-style-type: none
+  position: relative
+  left: 50%
+  li
+    float: left
+    width: 120px
+    &#share_twitter
+      width: 110px
+    &#share_facebook
+      width: 160px
+    &#share_twitter
+      width: 120px
+    &#share_twitter
+      width: 100px
+
 /////////////////////////////////////////////
 // PC
 /////////////////////////////////////////////
