--- a/css/style.sass
+++ b/css/style.sass
@@ -97,9 +97,9 @@ p.notice
   i
     margin-right: 5px
 
-#share
+.share_buttons
   @include cf
-  margin: 15px 0 15px -240px
+  margin: 15px 0 15px -230px
   padding: 0
   list-style-type: none
   position: relative
@@ -107,13 +107,13 @@ p.notice
   li
     float: left
     width: 120px
-    &#share_twitter
+    &.share_twitter
       width: 110px
-    &#share_facebook
+    &.share_facebook
       width: 160px
-    &#share_twitter
+    &.share_twitter
       width: 120px
-    &#share_twitter
+    &.share_twitter
       width: 100px
 
 /////////////////////////////////////////////
