シェアボタンスマホ対応

--- a/css/style.sass
+++ b/css/style.sass
@@ -173,3 +173,8 @@ p.notice
   p.small
     font-size: 14px
     margin: 0 20px
+
+  .share_buttons
+    width: 80%
+    left: 10%
+    margin: 15px 0
