--- a/css/style.css
+++ b/css/style.css
@@ -186,4 +186,9 @@ p.notice {
 
   p.small {
     font-size: 14px;
-    margin: 0 20px; } }
+    margin: 0 20px; }
+
+  .share_buttons {
+    width: 80%;
+    left: 10%;
+    margin: 15px 0; } }
